--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stephenvector/static-site-generator",
-  "version": "0.3.2",
+  "version": "0.3.3",
   "license": "MIT",
   "main": "./index.js",
   "scripts": {
@@ -9,7 +9,9 @@
     "start-nodemon": "nodemon  --ignore ./src/ build/index.js dev --inputDir=./ --siteName=Foldable.dev",
     "build": "tsc",
     "predemo": "npm run build",
-    "demo": "node index.js dev --siteName=Demo --inputDir=./demo-docs"
+    "demo": "node index.js dev --siteName=Demo --inputDir=./demo-docs",
+    "predemo-build": "npm run build",
+    "demo-build": "node index.js build --siteName=Demo --inputDir=./demo-docs --googleAnalyticsId=G-XXXXXXXXXX"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
