--- a/package.json
+++ b/package.json
@@ -7,24 +7,39 @@
     "start": "concurrently \"npm:start-*\"",
     "start-tsc": "tsc --watch",
     "start-nodemon": "nodemon  --ignore ./src/ build/index.js dev --inputDir=./ --siteName=Foldable.dev",
-    "build": "tsc",
+    "build": "webpack",
     "predemo": "npm run build",
     "demo": "node index.js dev --siteName=Demo --inputDir=./demo-docs",
     "predemo-build": "npm run build",
     "demo-build": "node index.js build --siteName=Demo --inputDir=./demo-docs --googleAnalyticsId=G-XXXXXXXXXX"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/preset-typescript": "^7.12.7",
     "@types/express": "^4.17.9",
     "@types/fs-extra": "^9.0.5",
     "@types/html-minifier": "^4.0.0",
     "@types/marked": "^1.2.0",
     "@types/node": "^14.14.8",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@types/ws": "^7.4.0",
     "@types/yargs": "^15.0.11",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-replace-ts-export-assignment": "0.0.2",
     "concurrently": "^5.3.0",
+    "copy-webpack-plugin": "^7.0.0",
+    "css-loader": "^5.0.1",
     "nodemon": "^2.0.6",
     "prettier": "^2.1.2",
-    "typescript": "^4.0.5"
+    "style-loader": "^2.0.0",
+    "typescript": "^4.0.5",
+    "typings-for-css-modules-loader": "^1.7.0",
+    "webpack": "^5.10.3",
+    "webpack-cli": "^4.2.0",
+    "webpack-node-externals": "^2.5.2"
   },
   "prettier": {},
   "dependencies": {
@@ -34,7 +49,13 @@
     "gray-matter": "^4.0.2",
     "highlight.js": "^10.4.1",
     "html-minifier": "^4.0.0",
+    "lowlight": "^1.17.0",
     "marked": "^1.2.5",
+    "prismjs": "^1.22.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "rehype-stringify": "^8.0.0",
+    "unified": "^9.2.0",
     "ws": "^7.4.0",
     "yargs": "^16.2.0"
   },
