--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "main": "./index.js",
   "scripts": {
+    "typecheck": "tsc --noEmit",
     "start": "concurrently \"npm:start-*\"",
     "start-tsc": "tsc --watch",
     "start-nodemon": "nodemon  --ignore ./src/ build/index.js dev --inputDir=./ --siteName=Foldable.dev",
@@ -29,6 +30,7 @@
   "prettier": {},
   "dependencies": {
     "chokidar": "^3.4.3",
+    "commonmark": "^0.29.3",
     "express": "^4.17.1",
     "fs-extra": "^9.0.1",
     "gray-matter": "^4.0.2",
